--- a/Contact Page.html
+++ b/Contact Page.html
@@ -16,9 +16,9 @@
                 <img src="assests/title logo.png" alt="Logo"> Khalil Al-Dajani
             </div>
             <ul>
-                <li><a href="Main page.html#about">About</a></li>
-                <li><a href="Main page.html#education">Education</a></li>
-                <li><a href="Main page.html#experience">Experience</a></li>
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#education">Education</a></li>
+                <li><a href="index.html#experience">Experience</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
         </div>
